k8s/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: io-deployment
  labels:
    app: io
spec:
  replicas: 2
  selector:
    matchLabels:
      app: io
  template:
    metadata:
      labels:
        app: io
    spec:
      # containers:
      # - name: io
      #   image: localhost:5000/imgoriginv5
      #   ports:
      #   - containerPort: 80 # this is the port exposed by your application via dockerfile
